--- a/comic.html
+++ b/comic.html
@@ -154,12 +154,33 @@ Start by changing the images in the scene to one of your own photos.
 
       <!-- This is the fifth scene -->
       <div class="scene">
+        <p class="caption bottom"> A bee!</p>
+        <!--<p class="speech right">What is this?</p>-->
+        <img src="https://kironroy.github.io/images/cartoons/bee.jpg" alt="" />
+      </div>
+
+      <!-- This is the sixth scene -->
+      <div class="scene">
+        <p class="caption bottom"> A flower that mom likes</p>
+        <!--<p class="speech right">What is this?</p>-->
+        <img src="https://kironroy.github.io/images/cartoons/flower.jpg" alt="" />
+      </div>
+
+      <!-- This is the seventh scene -->
+      <div class="scene">
+        <p class="caption bottom"> And a Frog</p>
+        <!--<p class="speech right">What is this?</p>-->
+        <img src="https://kironroy.github.io/images/cartoons/frog.jpg" alt="" />
+      </div>
+
+      <!-- This is the eight scene -->
+      <div class="scene">
         <p class="caption bottom">Super tall trees and roots!</p>
         <!--<p class="speech right">What is this?</p>-->
         <img src="https://kironroy.github.io/images/cartoons/forest3.jpg" alt="" />
       </div>
 
-      <!-- This is the sixth scene -->
+      <!-- This is the nineth scene -->
       <div class="scene">
         <p class="caption bottom">Waterfall, the end!</p>
         <img src="https://kironroy.github.io/images/cartoons/forest2.jpg" alt="" />
