--- a/comic.html
+++ b/comic.html
@@ -147,14 +147,14 @@ Start by changing the images in the scene to one of your own photos.
 
       <!-- This is the fourth scene -->
       <div class="scene">
-        <p class="caption bottom"> Mushrooms!</p>
+        <p class="caption bottom"> Mushrooms</p>
         <!--<p class="speech right">What is this?</p>-->
         <img src="https://kironroy.github.io/images/cartoons/forest4.jpg" alt="" />
       </div>
 
       <!-- This is the fifth scene -->
       <div class="scene">
-        <p class="caption bottom"> A bee!</p>
+        <p class="caption bottom"> A bee</p>
         <!--<p class="speech right">What is this?</p>-->
         <img src="https://kironroy.github.io/images/cartoons/bee.jpg" alt="" />
       </div>
@@ -175,7 +175,7 @@ Start by changing the images in the scene to one of your own photos.
 
       <!-- This is the eight scene -->
       <div class="scene">
-        <p class="caption bottom">Super tall trees and roots!</p>
+        <p class="caption bottom">Super tall trees and roots</p>
         <!--<p class="speech right">What is this?</p>-->
         <img src="https://kironroy.github.io/images/cartoons/forest3.jpg" alt="" />
       </div>
@@ -197,9 +197,11 @@ Copy the HTML for a 'scene' and paste it below this comment
     </div>
 
     <!-- Disclaimer for images -->
+    <br>
     <footer>
       Images: <a href="https://kironroy.github.io/">Kiron Roy</a>
     </footer>
+    <br>
 
   </body>
 </html>
