--- a/comic.html
+++ b/comic.html
@@ -9,7 +9,7 @@
     <!-- These are the styles for the comic -->
     <style>
       body {
-        background-color: #2D9961;
+        background-color: #2c993e;
         font-family: 'Delius Swash Caps', cursive;
         line-height: 1.2;
         text-align: center;
