--- a/comic.html
+++ b/comic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Create Your Own Comic: A Starter Make</title>
+    <title>My Forest Trip!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Delius+Swash+Caps" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
@@ -111,6 +111,9 @@
   <body>
 
     <!-- Step 1: This is where you can edit the title of your comic -->
+    <br>
+    <br>
+    <a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo_forest.svg" style="width:90px;height:90px;"></a>
     <br>
     <br>
     <h1>My Forest Trip!</h1>
