--- a/redwoods.html
+++ b/redwoods.html
@@ -41,8 +41,8 @@
 		</div><br>
 		<div class="w3-third">
 			<h2><i aria-hidden="true" class="fa fa-link"></i> Links</h2>
-			<p><a href="http://famousredwoods.com/">* All Redwoods</a></p>
-			<p><a href="https://repl.it/DbdW/12/">Redwoods Ruby programming</a></p>
+			<p><strong><a href="https://kironroy.github.io/comic">___My Forest Trip!___</a></strong></p>
+      <p><a href="https://repl.it/DbdW/12/">Redwoods Ruby programming</a></p>
 			<p><a href="http://www.mdvaden.com/redwood_hyperion.shtml">Hyperion Coast Redwood</a></p>
 			<p><a href="http://www.mdvaden.com/grove_of_titans.shtml">MD Vaden's main page</a></p>
 			<p><a href="http://www.mdvaden.com/redwood_dimensions.shtml">MD Vaden's Tallest and Largest Redwoods</a></p>
@@ -53,7 +53,7 @@
 		</div>
 		<div class="w3-third">
 			<h2><i aria-hidden="true" class="fa fa-map"></i> Maps</h2>
-			<p><a href="http://famousredwoods.com/">* All Redwoods</a></p>
+			<p><a href="http://famousredwoods.com/"> All Redwoods</a></p>
 			<p><a href="http://www.mendorailhistory.org/images/redwoods/NG_MapofRedwoods_lg.jpg">NATGEO Map (jpg)</a></p>
 			<p><a href="http://www.savetheredwoods.org/get-involved/visit/redwoods-finder/">Redwoods Finder Interactive Map</a></p>
 			<p><a href="https://www.google.com/maps/@40.3492017,-123.994635,1204m/data=!3m1!1e3">Big Tree Area: Giant Tree, Rockfeller Grove Google Maps</a></p>
