--- a/comic.html
+++ b/comic.html
@@ -112,10 +112,10 @@
 
     <!-- Step 1: This is where you can edit the title of your comic -->
     <br>
+
+    <center>&nbsp;&nbsp;<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo_forest.svg" style="width:100px;height:100px;"></a></center>
     <br>
-    <a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="logo_forest.svg" style="width:90px;height:90px;"></a>
-    <br>
-    <br>
+
     <h1>My Forest Trip!</h1>
 
     <!--
