black boreder off

--- a/comic.html
+++ b/comic.html
@@ -53,11 +53,11 @@
       .caption.bottom {
         bottom: 0;
         top:auto;
-        border-top: 1px solid black;
+        -border-top: 1px solid black;
       }
       .caption.top {
         top: 0;
-        border-bottom: 1px solid black;
+        -border-bottom: 1px solid black;
       }
       .speech {
         width: 40%;
