--- a/index.html
+++ b/index.html
@@ -8,22 +8,11 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon"><!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-  <!-- Scripts BEGIN -->
-	<script src="js/jquery.min.js">
+    <script src="js/jquery.min.js">
 	</script>
-
-	<script type="text/javascript">
-	if ( window.addEventListener ) {
-	  var state = 0, fun = [70,85,78];
-	  window.addEventListener("keydown", function(e) {
-	    if ( e.keyCode == fun[state] ) state++;
-	    else state = 0;
-	    if ( state == 3 )
-	      window.location = "https://kironroy.github.io/archives";
-	    }, true);
-	}
-  </script>
-  <script src="js/jquery.scrollzer.min.js">
+	<script src="js/jquery.scrolly.min.js">
+	</script>
+	<script src="js/jquery.scrollzer.min.js">
 	</script>
 	<script src="js/skel.min.js">
 	</script>
@@ -31,8 +20,6 @@
 	</script>
 	<script src="js/init.js">
 	</script> <noscript>
-	<!-- Scripts END -->
-	<!-- Styles BEGIN -->
 	<link href="favicon.ico" rel="shortcut icon">
 	<link href="css/skel.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
@@ -43,7 +30,6 @@
 	<link href="apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72"><!-- For iPhone: -->
 	<link href="apple-touch-icon-iphone.png" rel="apple-touch-icon"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 	<link href="apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed"><!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-  <!-- Styles END -->
 </head>
 <body>
 	<!-- Header -->
@@ -217,7 +203,7 @@
 					</div>
 					<div class="4u">
 						<article class="item">
-							<a class="image fit" href="http://kironroy.github.io/night"><!--**************************************SVG CODE AFTER THIS NOTE SCENE DETAILS *****************************************-->
+							<a class="image fit" href="http://kironroy.github.io/photos"><!--**************************************SVG CODE AFTER THIS NOTE SCENE DETAILS *****************************************-->
 							 <!-- Generator: Adobe Illustrator 14.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 43363)  -->
 							 <svg height="150px" id="Layer_1" version="1.1" viewbox="0 0 181 150" width="181px" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
 							<g id="Layer_1_1_">
@@ -392,7 +378,7 @@
 			<div class="container">
 				<header>
 					<h2>Contact</h2>
-					<p><span style="color:#BAB0AE"><a href="http://kironroy.github.io/archives">.</a></span></p><a class="button scrolly" href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:"><span style="color:black">email</span></a>
+					<p><span style="color:#BAB0AE"><a href="https://kironroy.github.io/archives">.</a></span></p><a class="button scrolly" href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:"><span style="color:black">email</span></a>
 				</header>
 			</div>
 		</section>
