--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="/favicon.ico" rel="icon" type="image/x-icon"><!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-    <script src="js/jquery.min.js">
+  <!-- fun starts -->
+	<script type="text/javascript">
+  if ( window.addEventListener ) {
+	  var state = 0, fun = [70,85,78];
+	  window.addEventListener("keydown", function(e) {
+	    if ( e.keyCode == fun[state] ) state++;
+	    else state = 0;
+	    if ( state == 3 )
+	      window.location = "https://kironroy.github.io/archives";
+	    }, true);
+	}
+  </script>
+	<!-- fun ends-->
+  <script src="js/jquery.min.js">
 	</script>
 	<script src="js/jquery.scrolly.min.js">
 	</script>
@@ -19,7 +32,7 @@
 	<script src="js/skel-layers.min.js">
 	</script>
 	<script src="js/init.js">
-	</script> <noscript>
+  </script> <noscript>
 	<link href="favicon.ico" rel="shortcut icon">
 	<link href="css/skel.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
