--- a/game_8_bit.html
+++ b/game_8_bit.html
@@ -128,7 +128,7 @@
     <!-- Step 1: This is where you can edit the title of your comic -->
     <br>
 
-    <center>&nbsp;&nbsp;<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo_8_bit.png" style="width:90px;height:90px;"></a></center>
+    <center><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo_8_bit.png" style="width:90px;height:90px;"></a></center>
     <br>
 
     <h1>Choose Your Adventure</h1>
