--- a/game_8_bit.html
+++ b/game_8_bit.html
@@ -126,7 +126,7 @@
   <body>
 
     <!-- Step 1: This is where you can edit the title of your comic -->
-    <center><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo_8_bit.png" style="width:90px;height:90px;"></a></center>
+    &nbsp;<center><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo_8_bit.png" style="width:90px;height:90px;"></a></center>
     <h1>Choose Your Adventure</h1>
 
     <!--
@@ -142,20 +142,20 @@ Start by changing the images in the scene to one of your own photos.
 -->
       <div class="scene">
         <p class="caption bottom">Press here... </p>
-        <!--<p class="speech left">Look at the view!</p>--><a href="https://www.w3schools.com">
+        <!--<p class="speech left">Look at the view!</p>--><a href="https://kironroy.github.io/">
         <img src="https://kironroy.github.io/images/cartoons/greek.png" alt="" /> </a>
       </div>
 
       <!-- This is the second scene in the comic-->
       <div class="scene">
         <p class="caption bottom">Press here... </p>
-        <!--<p class="speech left">Look at the view!</p>--><a href="https://www.w3schools.com">
+        <!--<p class="speech left">Look at the view!</p>--><a href="https://kironroy.github.io/">
         <img src="https://kironroy.github.io/images/cartoons/greek.png" alt="" /> </a>
       </div>
 
       <div class="scene">
         <p class="caption bottom">Press here... </p>
-        <!--<p class="speech left">Look at the view!</p>--><a href="https://www.w3schools.com">
+        <!--<p class="speech left">Look at the view!</p>--><a href="https://kironroy.github.io/">
         <img src="https://kironroy.github.io/images/cartoons/greek.png" alt="" /> </a>
       </div>
 
