--- a/game_8_bit.html
+++ b/game_8_bit.html
@@ -35,7 +35,7 @@
         width: 260px;
         height: 210px;
         border: 4px solid #FFFF66;
-        border-radius: 4px;
+        -border-radius: 4px;
         background: white;
         margin: 8px;
         display: inline-block;
