--- a/game_8_bit.html
+++ b/game_8_bit.html
@@ -15,6 +15,7 @@
     <style>
       body {
         background-color: #32292C;
+        color:#FFFF66;
         font-family: 'VT323', monospace;
         font-size: 130%;
         line-height: 1.2;
@@ -34,8 +35,8 @@
       .scene {
         width: 280px;
         height: 230px;
-        border: 4px solid #FFFF66;
-        -border-radius: 4px;
+        border: 5px solid black;
+        -border-radius: 8px;
         background: white;
         margin: 8px;
         display: inline-block;
@@ -47,12 +48,12 @@
         display: block;
       }
       .caption {
-        padding: 3px;
+        padding: 0px;
         margin: 0;
         position: absolute;
         left: 0;
         right: 0;
-        background: #FFFF66;
+        -background: #FFFF66;
         text-align: center;
         top: 0;
 
