--- a/dead.html
+++ b/dead.html
@@ -114,7 +114,7 @@ Start by changing the images in the scene to one of your own photos.
       <!-- This is the second scene in the comic-->
       <div class="scene">
         <p class="caption bottom">Play Again? </p>
-        <!--<p class="speech left">Look at the view!</p>--><a href="https://kironroy.github.io/forest_game">
+        <!--<p class="speech left">Look at the view!</p>--><a href="https://kironroy.github.io/forest_game.html">
         <img src="https://kironroy.github.io/images/cartoons/play_again.jpg" alt="" /> </a>
       </div>
 
