--- a/dead.html
+++ b/dead.html
@@ -89,7 +89,7 @@ ght:-15px;
 
     <!-- Step 1: This is where you can edit the title of your comic -->
     &nbsp;<center><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo_8_bit.png" style="width:90px;height:90px;"></a></center>
-    <h1>:(</h1>
+    <h1> You're Dead :(</h1>
 
     <!--
 This is where the comic starts.
@@ -105,7 +105,7 @@ Start by changing the images in the scene to one of your own photos.
       GAME OVER !
 
       <div class="scene">
-        <p class="caption bottom">You're Dead</p>
+        <p class="caption bottom">Your grave site</p>
         <!--<p class="speech left">Look at the view!</p>-->
         <img src="https://kironroy.github.io/images/cartoons/cross8bit.jpg" alt="" />
       </div>
@@ -114,7 +114,7 @@ Start by changing the images in the scene to one of your own photos.
       <!-- This is the second scene in the comic-->
       <div class="scene">
         <p class="caption bottom">Play Again? </p>
-        <!--<p class="speech left">Look at the view!</p>--><a href="https://kironroy.github.io/forest_game.html">
+        <!--<p class="speech left">Look at the view!</p>--><a href="https://kironroy.github.io/forest_game">
         <img src="https://kironroy.github.io/images/cartoons/play_again.jpg" alt="" /> </a>
       </div>
 
