--- a/forest_game.html
+++ b/forest_game.html
@@ -102,9 +102,10 @@ Steps 2, 3, and 4:
 The below HTML is the first scene of the comic.
 Start by changing the images in the scene to one of your own photos.
 -->
-      You are in an experimental Redwood forest
-      The tallest trees in the world are here
-      ...but it's a weird place
+      You are in an
+      experimental Redwood forest
+      The tallest trees in the world are here,
+      but it's a weird place
 
       <div class="scene">
         <p class="caption bottom">Bob from Twin Peaks is here</p>
