--- a/forest_game.html
+++ b/forest_game.html
@@ -123,10 +123,10 @@ Start by changing the images in the scene to one of your own photos.
 
       <div class="scene">
         <p class="caption bottom">Reason with him?</p>
-        <a href="https://kironroy.github.io/hover">
+        <a href="http://www.instructables.com/id/Create-Your-Own-Adventure-Game-HTML/">
           <img src="https://kironroy.github.io/images/cartoons/fire.jpg" alt="" /> </a>
         <br>
-
+        
       </div>
 
 
