--- a/forest_game.html
+++ b/forest_game.html
@@ -24,7 +24,7 @@
       }
       h1 {
         -text-transform: uppercase;
-        font-size: 40px;
+        font-size: 45px;
         color: #FFFF66;
 
       }
@@ -102,9 +102,13 @@ Steps 2, 3, and 4:
 The below HTML is the first scene of the comic.
 Start by changing the images in the scene to one of your own photos.
 -->
-      You are in an
-      experimental Redwood forest
-      The tallest trees in the world are here,
+      You're in an experimental
+      <br>
+      Redwood forest
+      The tallest trees in
+      <br>
+      the world are here,
+      <br>
       but it's a weird place
 
       <div class="scene">
@@ -126,10 +130,10 @@ Start by changing the images in the scene to one of your own photos.
         <a href="http://www.instructables.com/id/Create-Your-Own-Adventure-Game-HTML/">
           <img src="https://kironroy.github.io/images/cartoons/fire.jpg" alt="" /> </a>
         <br>
-        
+
       </div>
 
-
+      Images cited <span style="color:#FFFF66;">in </span>html code:
       <!--
 This is the end of the comic :(
 Want to create a larger comic?
