--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
             <li>Excel/OpenOffice</li>
             <li>Git</li>
             <li>HTML/CSS</li>
-            <li>JavaScript</li>
+            <li>JavaScript/jQuery</li>
             <li>Product Photography</li>
             <li>Ruby</li>
             <li>Sketch: macOS</li>
