--- a/redwoods.html
+++ b/redwoods.html
@@ -54,7 +54,7 @@
 		<div class="w3-third">
 			<h2><i aria-hidden="true" class="fa fa-map"></i> Maps</h2>
 			<p><a href="http://famousredwoods.com/"> All Redwoods</a></p>
-			<p><a href="https://www.google.com/maps/place/41%C2%B012'17.7%22N+124%C2%B000'56.0%22W/@41.2053661,-124.0155344,3a,75y,121.87h,93.04t/data=!3m8!1e1!3m6!1s-4TPc1j8c-WQ%2FV5-be4pBV2I%2FAAAAAAAAAQs%2FWxjGUEQYaw46GYjCa6slyXNKxSmaY4MRwCLIB!2e4!3e11!6s%2F%2Flh3.googleusercontent.com%2F-4TPc1j8c-WQ%2FV5-be4pBV2I%2FAAAAAAAAAQs%2FWxjGUEQYaw46GYjCa6slyXNKxSmaY4MRwCLIB%2Fw203-h100-k-no-pi-0-ya45.724434-ro-0-fo100%2F!7i8704!8i4352!4m5!3m4!1s0x0:0x0!8m2!3d41.20491!4d-124.01556">Hyperion Tree</a></p>
+			<p><a href="https://www.google.com/maps/place/41%C2%B012'17.7%22N+124%C2%B000'56.0%22W/@41.20491,-124.0177487,689m/data=!3m2!1e3!4b1!4m5!3m4!1s0x0:0x0!8m2!3d41.20491!4d-124.01556">Hyperion Tree</a></p>
       <p><a href="http://www.mendorailhistory.org/images/redwoods/NG_MapofRedwoods_lg.jpg">NATGEO Map (jpg)</a></p>
 			<p><a href="http://www.savetheredwoods.org/get-involved/visit/redwoods-finder/">Redwoods Finder Interactive Map</a></p>
 			<p><a href="https://www.google.com/maps/@40.3492017,-123.994635,1204m/data=!3m1!1e3">Big Tree Area: Giant Tree, Rockfeller Grove Google Maps</a></p>
