meta tag after head

--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta content="text/html; charset=utf-8" http-equiv="content-type">
+	<meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Kiron Roy: Resume</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="resumestyle.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Heebo:400,300' rel='stylesheet' type='text/css'>
   <script src="js/konami.js">
