--- a/archives.html
+++ b/archives.html
@@ -7,7 +7,7 @@
 <html>
 <head>
     <title>Archives</title>
-    <meta charset="utf-8">
+    <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name=
     "viewport">
     <script type="text/javascript">
