--- a/redwoods.html
+++ b/redwoods.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Redwoods: Sequoia sempervirens</title>
+	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<title>Redwoods: Sequoia sempervirens</title>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="redwoods2.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Yantramanav:300,500" rel="stylesheet">
