--- a/hh.html
+++ b/hh.html
@@ -33,8 +33,8 @@ h4 {
 }
 
 .column {
-  float: left;
-  width: 25%;
+  float: center;
+  width: 60%;
   padding: 10;
 }
 
@@ -162,6 +162,7 @@ img.hover-shadow {
 <h4>Night Scene </h4>
 
 <div class="row">
+  <center>
   <div class="column">
     <img src="https://kironroy.github.io/images/fulls/01.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
@@ -186,6 +187,7 @@ img.hover-shadow {
   <div class="column">
     <img src="https://kironroy.github.io/images/fulls/08.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
   </div>
+</center>
 </div>
 
 <!-- inside styling on thumbs -->
@@ -239,7 +241,7 @@ img.hover-shadow {
       <p id="caption"></p>
     </div>
 
-<!-- Thumbs in slider -->
+<!-- Thumbs in slider
     <div class="column">
       <img class="demo cursor" src="https://kironroy.github.io/images/fulls/01.jpg" style="width:100%" onclick="currentSlide(1)" alt="Import Tire">
     </div>
@@ -266,7 +268,7 @@ img.hover-shadow {
       <img class="demo cursor" src="https://kironroy.github.io/images/fulls/08.jpg" style="width:100%" onclick="currentSlide(8)" alt="B | G">
     </div>
 
-  </div>
+  </div>-->
 </div>
 
 <script>
