--- a/night.html
+++ b/night.html
@@ -7,9 +7,9 @@
 <html>
 
 <head>
-    <title>Night Scene</title>
-    <meta charset="utf-8">
+    <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
+    <title>Night Scene</title>
     <link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link href="assets/css/main.css" rel="stylesheet">
