--- a/archives2.html
+++ b/archives2.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta content="text/html; charset=utf-8" http-equiv="content-type">
-<title>Welcome to Archives</title>
+
 <link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
 </head>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
   font-family: "Heebo", sans-serif;
@@ -162,47 +159,59 @@ img.hover-shadow {
 <!-- first thing user sees -->
 
 <h2 style="text-align:center"><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:90px;height:90px;"></a></h2>
-<h4>Night Scene </h4>
+<h4>Welcome to Archives</h4>
 
 <div class="row">
   <center>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/01.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF1.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/02.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF2.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/03.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF3.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/04.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF4.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
   </div>
    <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/05.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF5.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/06.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF6.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/07.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF7.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/08.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF8.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/09.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF9.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/10.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF10.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/11.jpg" style="width:100%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF11.jpg" style="width:100%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="https://kironroy.github.io/images/fulls/12.jpg" style="width:100%" onclick="openModal();currentSlide(12)" class="hover-shadow cursor">
+    <img src="https://kironroy.github.io/images/fulls/archF12.jpg" style="width:100%" onclick="openModal();currentSlide(12)" class="hover-shadow cursor">
   </div>
-</center>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF13.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF14.jpg" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF15.jpg" style="width:100%" onclick="openModal();currentSlide(15)" class="hover-shadow cursor">
+  </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/archF16.jpg" style="width:100%" onclick="openModal();currentSlide(16)" class="hover-shadow cursor">
+  </div>
+ </center>
 </div>
 
 <!-- inside styling on thumbs -->
@@ -212,61 +221,81 @@ img.hover-shadow {
 
     <div class="mySlides">
       <div class="numbertext">1/ 12</div>
-      <img src="https://kironroy.github.io/images/fulls/01.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/02.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/03.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF3.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">4 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/04.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF4.jpg" style="width:100%">
     </div>
      <div class="mySlides">
       <div class="numbertext">5 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/05.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF5.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">6 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/06.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF6.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">7 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/07.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF7.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">8 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/08.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF8.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">9 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/09.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF9.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">10 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/10.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF10.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">11 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/11.jpg" style="width:100%">
+      <img src="https://kironroy.github.io/images/fulls/archF11.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">12 / 12</div>
-      <img src="https://kironroy.github.io/images/fulls/12.jpg" style="width:100%">
+      <div class="numbertext">12 / 16</div>
+      <img src="https://kironroy.github.io/images/fulls/archF12.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">13 / 16</div>
+      <img src="https://kironroy.github.io/images/fulls/archF13.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">14 / 16</div>
+      <img src="https://kironroy.github.io/images/fulls/archF14.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">15 / 16</div>
+      <img src="https://kironroy.github.io/images/fulls/archF15.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">16 / 16</div>
+      <img src="https://kironroy.github.io/images/fulls/archF16.jpg" style="width:100%">
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
