--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 			<div class="container">
 				<header>
 					<h2>Contact</h2>
-					<p><span style="color:#BAB0AE"><a href="https://kironroy.github.io/archives">.</a></span></p><a class="button scrolly" href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:"><span style="color:black">email</span></a>
+					<p><span style="color:#BAB0AE"><a href="https://kironroy.github.io/archives2">.</a></span></p><a class="button scrolly" href="mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:"><span style="color:black">email</span></a>
 				</header>
 			</div>
 		</section>
