--- a/archives2.html
+++ b/archives2.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
 
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta content="text/html; charset=utf-8" http-equiv="content-type">
+<title>Welcome to Archives</title>
 <link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>Welcome to Archives</title>
 <style>
 body {
   font-family: "Heebo", sans-serif;
@@ -220,56 +224,56 @@ img.hover-shadow {
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1/ 12</div>
+      <div class="numbertext">1/ 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2 / 12</div>
+      <div class="numbertext">2 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3 / 12</div>
+      <div class="numbertext">3 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF3.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4 / 12</div>
+      <div class="numbertext">4 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF4.jpg" style="width:100%">
     </div>
      <div class="mySlides">
-      <div class="numbertext">5 / 12</div>
+      <div class="numbertext">5 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF5.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">6 / 12</div>
+      <div class="numbertext">6 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF6.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">7 / 12</div>
+      <div class="numbertext">7 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF7.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">8 / 12</div>
+      <div class="numbertext">8 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF8.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">9 / 12</div>
+      <div class="numbertext">9 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF9.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">10 / 12</div>
+      <div class="numbertext">10 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF10.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">11 / 12</div>
+      <div class="numbertext">11 / 16</div>
       <img src="https://kironroy.github.io/images/fulls/archF11.jpg" style="width:100%">
     </div>
 
