--- a/archives2.html
+++ b/archives2.html
@@ -59,7 +59,7 @@ h4 {
 /* Modal Content */
 .modal-content {
   position: relative;
-  background-color: #FFF;
+  background-color: black;
   margin: auto;
   padding: 0;
   width: 100%;
@@ -68,7 +68,7 @@ h4 {
 
 /* The Close Button */
 .close {
-  color: white;
+  color: #EC1C24;
   position: absolute;
   top: 10px;
   right: 25px;
@@ -78,7 +78,7 @@ h4 {
 
 .close:hover,
 .close:focus {
-  color: #999;
+  color: white;
   text-decoration: none;
   cursor: pointer;
 }
@@ -100,9 +100,9 @@ h4 {
   width: auto;
   padding: 16px;
   margin-top: -50px;
-  color: white;
+  color: #EC1C24;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 50px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -123,8 +123,8 @@ h4 {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
+  color: #EC1C24;
+  font-size: 18px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
