--- a/night2.html
+++ b/night2.html
@@ -58,7 +58,7 @@ h4 {
 /* Modal Content */
 .modal-content {
   position: relative;
-  background-color: #FFF;
+  background-color: black;
   margin: auto;
   padding: 0;
   width: 100%;
@@ -67,7 +67,7 @@ h4 {
 
 /* The Close Button */
 .close {
-  color: white;
+  color: yellow;
   position: absolute;
   top: 10px;
   right: 25px;
@@ -77,7 +77,7 @@ h4 {
 
 .close:hover,
 .close:focus {
-  color: #999;
+  color: red;
   text-decoration: none;
   cursor: pointer;
 }
@@ -99,9 +99,9 @@ h4 {
   width: auto;
   padding: 16px;
   margin-top: -50px;
-  color: white;
+  color: yellow;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 50px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -122,8 +122,8 @@ h4 {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
+  color: yellow;
+  font-size: 18px;
   padding: 8px 12px;
   position: absolute;
   top: 0;
