--- a/night2.html
+++ b/night2.html
@@ -67,7 +67,7 @@ h4 {
 
 /* The Close Button */
 .close {
-  color: yellow;
+  color: #EC1C24;
   position: absolute;
   top: 10px;
   right: 25px;
@@ -77,7 +77,7 @@ h4 {
 
 .close:hover,
 .close:focus {
-  color: red;
+  color: white;
   text-decoration: none;
   cursor: pointer;
 }
@@ -99,7 +99,7 @@ h4 {
   width: auto;
   padding: 16px;
   margin-top: -50px;
-  color: yellow;
+  color: #EC1C24;
   font-weight: bold;
   font-size: 50px;
   transition: 0.6s ease;
@@ -122,7 +122,7 @@ h4 {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: yellow;
+  color: #EC1C24;
   font-size: 18px;
   padding: 8px 12px;
   position: absolute;
