--- a/night2.html
+++ b/night2.html
@@ -6,6 +6,12 @@
 <meta content="text/html; charset=utf-8" http-equiv="content-type">
 <title>Welcome to Archives</title>
 <link href='https://fonts.googleapis.com/css?family=Heebo:300' rel='stylesheet' type='text/css'>
+<link href="apple-touch-icon-192x192-precomposed.png" rel="icon" sizes="192x192"><!-- For third-generation iPad with high-resolution Retina display: -->
+<link href="apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144"><!-- For iPhone with high-resolution Retina display: -->
+<link href="apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114"><!-- For first- and second-generation iPad: -->
+<link href="apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72"><!-- For iPhone: -->
+<link href="apple-touch-icon-iphone.png" rel="apple-touch-icon"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+<link href="apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed"><!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
 
 <style>
