--- a/night2.html
+++ b/night2.html
@@ -208,6 +208,9 @@ img.hover-shadow {
   <div class="column">
     <img src="https://kironroy.github.io/images/fulls/12.jpg" style="width:100%" onclick="openModal();currentSlide(12)" class="hover-shadow cursor">
   </div>
+  <div class="column">
+    <img src="https://kironroy.github.io/images/fulls/13.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+  </div>
 </center>
 </div>
 
@@ -217,62 +220,67 @@ img.hover-shadow {
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1/ 12</div>
+      <div class="numbertext">1/ 13</div>
       <img src="https://kironroy.github.io/images/fulls/01.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2 / 12</div>
+      <div class="numbertext">2 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/02.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3 / 12</div>
+      <div class="numbertext">3 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/03.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4 / 12</div>
+      <div class="numbertext">4 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/04.jpg" style="width:100%">
     </div>
      <div class="mySlides">
-      <div class="numbertext">5 / 12</div>
+      <div class="numbertext">5 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/05.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">6 / 12</div>
+      <div class="numbertext">6 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/06.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">7 / 12</div>
+      <div class="numbertext">7 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/07.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">8 / 12</div>
+      <div class="numbertext">8 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/08.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">9 / 12</div>
+      <div class="numbertext">9 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/09.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">10 / 12</div>
+      <div class="numbertext">10 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/10.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">11 / 12</div>
+      <div class="numbertext">11 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/11.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">12 / 12</div>
+      <div class="numbertext">12 / 13</div>
       <img src="https://kironroy.github.io/images/fulls/12.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">13 / 13</div>
+      <img src="https://kironroy.github.io/images/fulls/13.jpg" style="width:100%">
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
