--- a/archives2.html
+++ b/archives2.html
@@ -43,6 +43,7 @@ h4 {
  text-align: center;
  font-family: "Heebo", sans-serif;
  font-weight: 300;
+ font-size: 14px;
  }
 
 .row > .column {
@@ -181,8 +182,8 @@ img.hover-shadow {
 
 <!-- first thing user sees -->
 
-<h2 style="text-align:center"><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:90px;height:90px;"></a></h2>
-<h4>Welcome to Archives</h4>
+<h2 style="text-align:center"><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:70px;height:70px;"></a></h2>
+<h4>Archives: tap/click a photo </h4>
 
 <div class="row">
   <center>
