--- a/night2.html
+++ b/night2.html
@@ -31,7 +31,7 @@ h4 {
  text-align: center;
  font-family: "Heebo", sans-serif;
  font-weight: 300;
- font-size: 14px;
+ font-size: 15px;
  }
 
 .row > .column {
@@ -42,6 +42,11 @@ h4 {
   content: "";
   display: table;
   clear: both;
+}
+
+.tap {
+  font-style: italic;
+  color: grey;
 }
 
 .column {
@@ -171,7 +176,7 @@ img.hover-shadow {
 <!-- first thing user sees -->
 
 <h2 style="text-align:center"><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:70px;height:70px;"></a></h2>
-<h4>Night Scene: tap/click a photo </h4>
+<h4>Night Scene <div class="tap"> tap or click a photo</div> </h4>
 
 <div class="row">
   <center>
