--- a/night2.html
+++ b/night2.html
@@ -175,8 +175,8 @@ img.hover-shadow {
 
 <!-- first thing user sees -->
 
-<h2 style="text-align:center"><a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:70px;height:70px;"></a></h2>
-<h4>Night Scene <div class="tap"> tap or click a photo</div> </h4>
+<h2 style="text-align:center">&nbsp;&nbsp;<a href="http://kironroy.github.io"><img alt="Kiron Roy Logo" src="https://kironroy.github.io/logo2.svg" style="width:70px;height:70px;"></a></h2>
+<h4>&nbsp;&nbsp;Night Scene <div class="tap">&nbsp;&nbsp;tap or click a photo</div> </h4>
 
 <div class="row">
   <center>
